--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 <style>
 /* CSS for the lane'S */
-.lane10, .lane11, .lane12, .lane13, .lane14, .lane15
+.lane11, .lane12, .lane13, .lane14, .lane15
 , .lane16, .lane17, .lane18, .lane19, .lane20, .lane21, .lane22, .lane23, .lane24, .lane25, .lane26, .lane27, .lane28
 , .lane29, .lane30, .lane31, .lane32, .lane33, .lane34{
 	width: 10px;
@@ -22,6 +22,7 @@
 	border-radius: 2px;
 	
 }
+	
 
 .lane01, .lane02, .lane03, .lane04, .lane05, .lane06, .lane07, .lane08, .lane09, .lane35, .lane36, .lane37, .lane38, .lane39, .lane40, .lane41, .lane42, .lane43, .lane44, .lane45  {
 	width: 10px;
@@ -37,7 +38,20 @@
 
 }
 
-
+.lane10{
+		width: 10px;
+	height: 10px;
+	background-color: green; 
+	margin: 2px;
+	border: 1px solid black;
+	cursor: pointer; 
+	position: inline-block;
+	display: flex;
+	transition: background-color 0.3s ease;
+	font-size: 4px;
+	border-radius: 2px;
+	
+}
 
 .vertical {
 	display: inline-block;
@@ -770,3 +784,4 @@ body {
 
 </body>
 </html>
+
