--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 <style>
 /* CSS for the lane'S */
-.lane11, .lane12, .lane13, .lane14, .lane15
+.lane10, .lane11, .lane12, .lane13, .lane14, .lane15
 , .lane16, .lane17, .lane18, .lane19, .lane20, .lane21, .lane22, .lane23, .lane24, .lane25, .lane26, .lane27, .lane28
 , .lane29, .lane30, .lane31, .lane32, .lane33, .lane34{
 	width: 10px;
@@ -38,20 +38,6 @@
 
 }
 
-.lane10{
-		width: 10px;
-	height: 10px;
-	background-color: green; 
-	margin: 2px;
-	border: 1px solid black;
-	cursor: pointer; 
-	position: inline-block;
-	display: flex;
-	transition: background-color 0.3s ease;
-	font-size: 4px;
-	border-radius: 2px;
-	
-}
 
 .vertical {
 	display: inline-block;
@@ -784,4 +770,5 @@ body {
 
 </body>
 </html>
+
 
